--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="action_settings">Settings</string>
     <string name="start">Start.</string>
     <string name="title_activity_main">MainActivity</string>
+    <string name="title_activity_post">PostActivity</string>
 </resources>
