--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="minute_format">%d分</string>
     <string name="hour_format">%d時間</string>
     <string name="day_format">%d日</string>
+    <string name="retweet_notify_format_text">%sさんがリツイートしました</string>
 </resources>
