--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="hour_format">%d時間</string>
     <string name="day_format">%d日</string>
     <string name="retweet_notify_format_text">%sさんがリツイートしました</string>
+    <string name="mention_format_text">"@"%s </string>
 </resources>
